zetasql/parser/testdata/corresponding.test
SELECT a FROM A
UNION ALL CORRESPONDING
SELECT b FROM B
--
QueryStatement [0-55] [SELECT a FROM...ELECT b FROM B]
  Query [0-55] [SELECT a FROM...ELECT b FROM B]
    SetOperation(UNION ALL) [0-55] [SELECT a FROM...ELECT b FROM B]
      SetOperationMetadataList [15-39] [UNION ALL CORRESPONDING]
        SetOperationMetadata [15-39] [UNION ALL CORRESPONDING]
          SetOperationType [16-21] [UNION]
          SetOperationAllOrDistinct [22-25] [ALL]
          SetOperationColumnMatchMode [26-39] [CORRESPONDING]
      Select [0-15] [SELECT a FROM A]
        SelectList [7-8] [a]
          SelectColumn [7-8] [a]
            PathExpression [7-8] [a]
              Identifier(a) [7-8] [a]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [40-55] [SELECT b FROM B]
        SelectList [47-48] [b]
          SelectColumn [47-48] [b]
            PathExpression [47-48] [b]
              Identifier(b) [47-48] [b]
        FromClause [49-55] [FROM B]
          TablePathExpression [54-55] [B]
            PathExpression [54-55] [B]
              Identifier(B) [54-55] [B]
--
SELECT
  a
FROM
  A
UNION ALL CORRESPONDING
SELECT
  b
FROM
  B
==

SELECT a FROM A
UNION ALL CORRESPONDING
SELECT b FROM B
UNION ALL CORRESPONDING
SELECT c FROM C
--
QueryStatement [0-95] [SELECT a FROM...ELECT c FROM C]
  Query [0-95] [SELECT a FROM...ELECT c FROM C]
    SetOperation(UNION ALL) [0-95] [SELECT a FROM...ELECT c FROM C]
      SetOperationMetadataList [15-79] [UNION ALL...CORRESPONDING]
        SetOperationMetadata [15-39] [UNION ALL CORRESPONDING]
          SetOperationType [16-21] [UNION]
          SetOperationAllOrDistinct [22-25] [ALL]
          SetOperationColumnMatchMode [26-39] [CORRESPONDING]
        SetOperationMetadata [55-79] [UNION ALL CORRESPONDING]
          SetOperationType [56-61] [UNION]
          SetOperationAllOrDistinct [62-65] [ALL]
          SetOperationColumnMatchMode [66-79] [CORRESPONDING]
      Select [0-15] [SELECT a FROM A]
        SelectList [7-8] [a]
          SelectColumn [7-8] [a]
            PathExpression [7-8] [a]
              Identifier(a) [7-8] [a]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [40-55] [SELECT b FROM B]
        SelectList [47-48] [b]
          SelectColumn [47-48] [b]
            PathExpression [47-48] [b]
              Identifier(b) [47-48] [b]
        FromClause [49-55] [FROM B]
          TablePathExpression [54-55] [B]
            PathExpression [54-55] [B]
              Identifier(B) [54-55] [B]
      Select [80-95] [SELECT c FROM C]
        SelectList [87-88] [c]
          SelectColumn [87-88] [c]
            PathExpression [87-88] [c]
              Identifier(c) [87-88] [c]
        FromClause [89-95] [FROM C]
          TablePathExpression [94-95] [C]
            PathExpression [94-95] [C]
              Identifier(C) [94-95] [C]
--
SELECT
  a
FROM
  A
UNION ALL CORRESPONDING
SELECT
  b
FROM
  B
UNION ALL CORRESPONDING
SELECT
  c
FROM
  C
==

# Multiple set operations with and without CORRESPONDING with parentheses are
# allowed.
(SELECT abc FROM T
UNION ALL CORRESPONDING
SELECT 5)
UNION ALL
SELECT NULL FROM T2
--
QueryStatement [0-82] [(SELECT abc...NULL FROM T2]
  Query [0-82] [(SELECT abc...NULL FROM T2]
    SetOperation(UNION ALL) [0-82] [(SELECT abc...NULL FROM T2]
      SetOperationMetadataList [52-62] [UNION ALL]
        SetOperationMetadata [52-62] [UNION ALL]
          SetOperationType [53-58] [UNION]
          SetOperationAllOrDistinct [59-62] [ALL]
      Query [1-51] [SELECT abc...SPONDING SELECT 5]
        SetOperation(UNION ALL) [1-51] [SELECT abc...SPONDING SELECT 5]
          SetOperationMetadataList [18-42] [UNION ALL CORRESPONDING]
            SetOperationMetadata [18-42] [UNION ALL CORRESPONDING]
              SetOperationType [19-24] [UNION]
              SetOperationAllOrDistinct [25-28] [ALL]
              SetOperationColumnMatchMode [29-42] [CORRESPONDING]
          Select [1-18] [SELECT abc FROM T]
            SelectList [8-11] [abc]
              SelectColumn [8-11] [abc]
                PathExpression [8-11] [abc]
                  Identifier(abc) [8-11] [abc]
            FromClause [12-18] [FROM T]
              TablePathExpression [17-18] [T]
                PathExpression [17-18] [T]
                  Identifier(T) [17-18] [T]
          Select [43-51] [SELECT 5]
            SelectList [50-51] [5]
              SelectColumn [50-51] [5]
                IntLiteral(5) [50-51] [5]
      Select [63-82] [SELECT NULL FROM T2]
        SelectList [70-74] [NULL]
          SelectColumn [70-74] [NULL]
            NullLiteral(NULL) [70-74] [NULL]
        FromClause [75-82] [FROM T2]
          TablePathExpression [80-82] [T2]
            PathExpression [80-82] [T2]
              Identifier(T2) [80-82] [T2]
--
(
SELECT
  abc
FROM
  T
UNION ALL CORRESPONDING
SELECT
  5
) UNION ALL
SELECT
  NULL
FROM
  T2
==

# CORRESPONDING BY
SELECT abc FROM T
UNION ALL CORRESPONDING BY (abc)
SELECT 777
--
QueryStatement [0-61] [SELECT abc...SELECT 777]
  Query [0-61] [SELECT abc...SELECT 777]
    SetOperation(UNION ALL) [0-61] [SELECT abc...SELECT 777]
      SetOperationMetadataList [17-50] [UNION ALL...ESPONDING BY (abc)]
        SetOperationMetadata [17-50] [UNION ALL...ESPONDING BY (abc)]
          SetOperationType [18-23] [UNION]
          SetOperationAllOrDistinct [24-27] [ALL]
          SetOperationColumnMatchMode [28-44] [CORRESPONDING BY]
          ColumnList [45-50] [(abc)]
            Identifier(abc) [46-49] [abc]
      Select [0-17] [SELECT abc FROM T]
        SelectList [7-10] [abc]
          SelectColumn [7-10] [abc]
            PathExpression [7-10] [abc]
              Identifier(abc) [7-10] [abc]
        FromClause [11-17] [FROM T]
          TablePathExpression [16-17] [T]
            PathExpression [16-17] [T]
              Identifier(T) [16-17] [T]
      Select [51-61] [SELECT 777]
        SelectList [58-61] [777]
          SelectColumn [58-61] [777]
            IntLiteral(777) [58-61] [777]
--
SELECT
  abc
FROM
  T
UNION ALL CORRESPONDING BY (abc)
SELECT
  777
==

# CORRESPONDING BY multiple columns
SELECT abc FROM T
UNION ALL CORRESPONDING BY (abc, def)
SELECT 777
--
QueryStatement [0-66] [SELECT abc...SELECT 777]
  Query [0-66] [SELECT abc...SELECT 777]
    SetOperation(UNION ALL) [0-66] [SELECT abc...SELECT 777]
      SetOperationMetadataList [17-55] [UNION ALL...(abc, def)]
        SetOperationMetadata [17-55] [UNION ALL...(abc, def)]
          SetOperationType [18-23] [UNION]
          SetOperationAllOrDistinct [24-27] [ALL]
          SetOperationColumnMatchMode [28-44] [CORRESPONDING BY]
          ColumnList [45-55] [(abc, def)]
            Identifier(abc) [46-49] [abc]
            Identifier(def) [51-54] [def]
      Select [0-17] [SELECT abc FROM T]
        SelectList [7-10] [abc]
          SelectColumn [7-10] [abc]
            PathExpression [7-10] [abc]
              Identifier(abc) [7-10] [abc]
        FromClause [11-17] [FROM T]
          TablePathExpression [16-17] [T]
            PathExpression [16-17] [T]
              Identifier(T) [16-17] [T]
      Select [56-66] [SELECT 777]
        SelectList [63-66] [777]
          SelectColumn [63-66] [777]
            IntLiteral(777) [63-66] [777]
--
SELECT
  abc
FROM
  T
UNION ALL CORRESPONDING BY (abc, def)
SELECT
  777
==

# Empty column list not allowed for CORRESPONDING BY.
SELECT *
FROM A
INTERSECT ALL CORRESPONDING BY ()
SELECT *
FROM B
--
ERROR: Syntax error: Unexpected ")" [at 3:33]
INTERSECT ALL CORRESPONDING BY ()
                                ^
==

# A column list must be provided for CORRESPONDING BY.
SELECT *
FROM A
INTERSECT DISTINCT CORRESPONDING BY
SELECT *
FROM B
--
ERROR: Syntax error: Expected "(" but got keyword SELECT [at 4:1]
SELECT *
^
==

# STRICT mode
SELECT *
FROM A
EXCEPT ALL STRICT CORRESPONDING BY (a)
SELECT *
FROM B
--
QueryStatement [0-70] [SELECT * FROM...ELECT * FROM B]
  Query [0-70] [SELECT * FROM...ELECT * FROM B]
    SetOperation(EXCEPT ALL) [0-70] [SELECT * FROM...ELECT * FROM B]
      SetOperationMetadataList [15-54] [EXCEPT ALL...RESPONDING BY (a)]
        SetOperationMetadata [15-54] [EXCEPT ALL...RESPONDING BY (a)]
          SetOperationType [16-22] [EXCEPT]
          SetOperationAllOrDistinct [23-26] [ALL]
          SetOperationColumnMatchMode [34-50] [CORRESPONDING BY]
          SetOperationColumnPropagationMode [27-33] [STRICT]
          ColumnList [51-54] [(a)]
            Identifier(a) [52-53] [a]
      Select [0-15] [SELECT * FROM A]
        SelectList [7-8] [*]
          SelectColumn [7-8] [*]
            Star(*) [7-8] [*]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [55-70] [SELECT * FROM B]
        SelectList [62-63] [*]
          SelectColumn [62-63] [*]
            Star(*) [62-63] [*]
        FromClause [64-70] [FROM B]
          TablePathExpression [69-70] [B]
            PathExpression [69-70] [B]
              Identifier(B) [69-70] [B]
--
SELECT
  *
FROM
  A
EXCEPT ALL STRICT CORRESPONDING BY (a)
SELECT
  *
FROM
  B
==

# Multiple set operations with STRICT mode
SELECT *
FROM A
UNION ALL STRICT CORRESPONDING BY (a)
SELECT *
FROM B
UNION ALL STRICT CORRESPONDING BY (a)
SELECT *
FROM C
--
QueryStatement [0-123] [SELECT * FROM...ELECT * FROM C]
  Query [0-123] [SELECT * FROM...ELECT * FROM C]
    SetOperation(UNION ALL) [0-123] [SELECT * FROM...ELECT * FROM C]
      SetOperationMetadataList [15-107] [UNION ALL...RRESPONDING BY (a)]
        SetOperationMetadata [15-53] [UNION ALL...RRESPONDING BY (a)]
          SetOperationType [16-21] [UNION]
          SetOperationAllOrDistinct [22-25] [ALL]
          SetOperationColumnMatchMode [33-49] [CORRESPONDING BY]
          SetOperationColumnPropagationMode [26-32] [STRICT]
          ColumnList [50-53] [(a)]
            Identifier(a) [51-52] [a]
        SetOperationMetadata [69-107] [UNION ALL...RRESPONDING BY (a)]
          SetOperationType [70-75] [UNION]
          SetOperationAllOrDistinct [76-79] [ALL]
          SetOperationColumnMatchMode [87-103] [CORRESPONDING BY]
          SetOperationColumnPropagationMode [80-86] [STRICT]
          ColumnList [104-107] [(a)]
            Identifier(a) [105-106] [a]
      Select [0-15] [SELECT * FROM A]
        SelectList [7-8] [*]
          SelectColumn [7-8] [*]
            Star(*) [7-8] [*]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [54-69] [SELECT * FROM B]
        SelectList [61-62] [*]
          SelectColumn [61-62] [*]
            Star(*) [61-62] [*]
        FromClause [63-69] [FROM B]
          TablePathExpression [68-69] [B]
            PathExpression [68-69] [B]
              Identifier(B) [68-69] [B]
      Select [108-123] [SELECT * FROM C]
        SelectList [115-116] [*]
          SelectColumn [115-116] [*]
            Star(*) [115-116] [*]
        FromClause [117-123] [FROM C]
          TablePathExpression [122-123] [C]
            PathExpression [122-123] [C]
              Identifier(C) [122-123] [C]
--
SELECT
  *
FROM
  A
UNION ALL STRICT CORRESPONDING BY (a)
SELECT
  *
FROM
  B
UNION ALL STRICT CORRESPONDING BY (a)
SELECT
  *
FROM
  C
==

# FULL mode
SELECT *
FROM A
FULL UNION ALL CORRESPONDING
SELECT *
FROM B
--
QueryStatement [0-60] [SELECT * FROM...ELECT * FROM B]
  Query [0-60] [SELECT * FROM...ELECT * FROM B]
    SetOperation(UNION ALL) [0-60] [SELECT * FROM...ELECT * FROM B]
      SetOperationMetadataList [16-44] [FULL UNION ALL CORRESPONDING]
        SetOperationMetadata [16-44] [FULL UNION ALL CORRESPONDING]
          SetOperationType [21-26] [UNION]
          SetOperationAllOrDistinct [27-30] [ALL]
          SetOperationColumnMatchMode [31-44] [CORRESPONDING]
          SetOperationColumnPropagationMode [16-20] [FULL]
      Select [0-15] [SELECT * FROM A]
        SelectList [7-8] [*]
          SelectColumn [7-8] [*]
            Star(*) [7-8] [*]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [45-60] [SELECT * FROM B]
        SelectList [52-53] [*]
          SelectColumn [52-53] [*]
            Star(*) [52-53] [*]
        FromClause [54-60] [FROM B]
          TablePathExpression [59-60] [B]
            PathExpression [59-60] [B]
              Identifier(B) [59-60] [B]
--
SELECT
  *
FROM
  A
FULL UNION ALL CORRESPONDING
SELECT
  *
FROM
  B
==

# FULL OUTER mode
SELECT *
FROM A
FULL OUTER EXCEPT ALL CORRESPONDING
SELECT *
FROM B
--
QueryStatement [0-67] [SELECT * FROM...ELECT * FROM B]
  Query [0-67] [SELECT * FROM...ELECT * FROM B]
    SetOperation(EXCEPT ALL) [0-67] [SELECT * FROM...ELECT * FROM B]
      SetOperationMetadataList [16-51] [FULL OUTER...CORRESPONDING]
        SetOperationMetadata [16-51] [FULL OUTER...CORRESPONDING]
          SetOperationType [27-33] [EXCEPT]
          SetOperationAllOrDistinct [34-37] [ALL]
          SetOperationColumnMatchMode [38-51] [CORRESPONDING]
          SetOperationColumnPropagationMode [16-26] [FULL OUTER]
      Select [0-15] [SELECT * FROM A]
        SelectList [7-8] [*]
          SelectColumn [7-8] [*]
            Star(*) [7-8] [*]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [52-67] [SELECT * FROM B]
        SelectList [59-60] [*]
          SelectColumn [59-60] [*]
            Star(*) [59-60] [*]
        FromClause [61-67] [FROM B]
          TablePathExpression [66-67] [B]
            PathExpression [66-67] [B]
              Identifier(B) [66-67] [B]
--
SELECT
  *
FROM
  A
FULL EXCEPT ALL CORRESPONDING
SELECT
  *
FROM
  B
==

# FULL and FULL OUTER multiple operations
SELECT *
FROM A
FULL UNION ALL CORRESPONDING
SELECT *
FROM B
FULL OUTER UNION ALL CORRESPONDING
SELECT *
FROM C
--
QueryStatement [0-111] [SELECT * FROM...ELECT * FROM C]
  Query [0-111] [SELECT * FROM...ELECT * FROM C]
    SetOperation(UNION ALL) [0-111] [SELECT * FROM...ELECT * FROM C]
      SetOperationMetadataList [16-95] [FULL UNION...CORRESPONDING]
        SetOperationMetadata [16-44] [FULL UNION ALL CORRESPONDING]
          SetOperationType [21-26] [UNION]
          SetOperationAllOrDistinct [27-30] [ALL]
          SetOperationColumnMatchMode [31-44] [CORRESPONDING]
          SetOperationColumnPropagationMode [16-20] [FULL]
        SetOperationMetadata [61-95] [FULL OUTER...CORRESPONDING]
          SetOperationType [72-77] [UNION]
          SetOperationAllOrDistinct [78-81] [ALL]
          SetOperationColumnMatchMode [82-95] [CORRESPONDING]
          SetOperationColumnPropagationMode [61-71] [FULL OUTER]
      Select [0-15] [SELECT * FROM A]
        SelectList [7-8] [*]
          SelectColumn [7-8] [*]
            Star(*) [7-8] [*]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [45-60] [SELECT * FROM B]
        SelectList [52-53] [*]
          SelectColumn [52-53] [*]
            Star(*) [52-53] [*]
        FromClause [54-60] [FROM B]
          TablePathExpression [59-60] [B]
            PathExpression [59-60] [B]
              Identifier(B) [59-60] [B]
      Select [96-111] [SELECT * FROM C]
        SelectList [103-104] [*]
          SelectColumn [103-104] [*]
            Star(*) [103-104] [*]
        FromClause [105-111] [FROM C]
          TablePathExpression [110-111] [C]
            PathExpression [110-111] [C]
              Identifier(C) [110-111] [C]
--
SELECT
  *
FROM
  A
FULL UNION ALL CORRESPONDING
SELECT
  *
FROM
  B
FULL UNION ALL CORRESPONDING
SELECT
  *
FROM
  C
==

# LEFT mode
SELECT *
FROM A
LEFT INTERSECT ALL CORRESPONDING
SELECT *
FROM B
--
QueryStatement [0-64] [SELECT * FROM...ELECT * FROM B]
  Query [0-64] [SELECT * FROM...ELECT * FROM B]
    SetOperation(INTERSECT ALL) [0-64] [SELECT * FROM...ELECT * FROM B]
      SetOperationMetadataList [16-48] [LEFT INTERSECT...CORRESPONDING]
        SetOperationMetadata [16-48] [LEFT INTERSECT...CORRESPONDING]
          SetOperationType [21-30] [INTERSECT]
          SetOperationAllOrDistinct [31-34] [ALL]
          SetOperationColumnMatchMode [35-48] [CORRESPONDING]
          SetOperationColumnPropagationMode [16-20] [LEFT]
      Select [0-15] [SELECT * FROM A]
        SelectList [7-8] [*]
          SelectColumn [7-8] [*]
            Star(*) [7-8] [*]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [49-64] [SELECT * FROM B]
        SelectList [56-57] [*]
          SelectColumn [56-57] [*]
            Star(*) [56-57] [*]
        FromClause [58-64] [FROM B]
          TablePathExpression [63-64] [B]
            PathExpression [63-64] [B]
              Identifier(B) [63-64] [B]
--
SELECT
  *
FROM
  A
LEFT INTERSECT ALL CORRESPONDING
SELECT
  *
FROM
  B
==

# LEFT OUTER mode
SELECT *
FROM A
LEFT OUTER EXCEPT ALL CORRESPONDING
SELECT *
FROM B
--
QueryStatement [0-67] [SELECT * FROM...ELECT * FROM B]
  Query [0-67] [SELECT * FROM...ELECT * FROM B]
    SetOperation(EXCEPT ALL) [0-67] [SELECT * FROM...ELECT * FROM B]
      SetOperationMetadataList [16-51] [LEFT OUTER...CORRESPONDING]
        SetOperationMetadata [16-51] [LEFT OUTER...CORRESPONDING]
          SetOperationType [27-33] [EXCEPT]
          SetOperationAllOrDistinct [34-37] [ALL]
          SetOperationColumnMatchMode [38-51] [CORRESPONDING]
          SetOperationColumnPropagationMode [16-26] [LEFT OUTER]
      Select [0-15] [SELECT * FROM A]
        SelectList [7-8] [*]
          SelectColumn [7-8] [*]
            Star(*) [7-8] [*]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [52-67] [SELECT * FROM B]
        SelectList [59-60] [*]
          SelectColumn [59-60] [*]
            Star(*) [59-60] [*]
        FromClause [61-67] [FROM B]
          TablePathExpression [66-67] [B]
            PathExpression [66-67] [B]
              Identifier(B) [66-67] [B]
--
SELECT
  *
FROM
  A
LEFT EXCEPT ALL CORRESPONDING
SELECT
  *
FROM
  B
==

# LFET and LEFT OUTER multiple operations
SELECT *
FROM A
LEFT UNION DISTINCT CORRESPONDING BY (a, b, c)
SELECT *
FROM B
LEFT OUTER UNION DISTINCT CORRESPONDING BY (a, b, c)
SELECT *
FROM C
--
QueryStatement [0-147] [SELECT * FROM...ELECT * FROM C]
  Query [0-147] [SELECT * FROM...ELECT * FROM C]
    SetOperation(UNION DISTINCT) [0-147] [SELECT * FROM...ELECT * FROM C]
      SetOperationMetadataList [16-131] [LEFT UNION...(a, b, c)]
        SetOperationMetadata [16-62] [LEFT UNION...(a, b, c)]
          SetOperationType [21-26] [UNION]
          SetOperationAllOrDistinct [27-35] [DISTINCT]
          SetOperationColumnMatchMode [36-52] [CORRESPONDING BY]
          SetOperationColumnPropagationMode [16-20] [LEFT]
          ColumnList [53-62] [(a, b, c)]
            Identifier(a) [54-55] [a]
            Identifier(b) [57-58] [b]
            Identifier(c) [60-61] [c]
        SetOperationMetadata [79-131] [LEFT OUTER...(a, b, c)]
          SetOperationType [90-95] [UNION]
          SetOperationAllOrDistinct [96-104] [DISTINCT]
          SetOperationColumnMatchMode [105-121] [CORRESPONDING BY]
          SetOperationColumnPropagationMode [79-89] [LEFT OUTER]
          ColumnList [122-131] [(a, b, c)]
            Identifier(a) [123-124] [a]
            Identifier(b) [126-127] [b]
            Identifier(c) [129-130] [c]
      Select [0-15] [SELECT * FROM A]
        SelectList [7-8] [*]
          SelectColumn [7-8] [*]
            Star(*) [7-8] [*]
        FromClause [9-15] [FROM A]
          TablePathExpression [14-15] [A]
            PathExpression [14-15] [A]
              Identifier(A) [14-15] [A]
      Select [63-78] [SELECT * FROM B]
        SelectList [70-71] [*]
          SelectColumn [70-71] [*]
            Star(*) [70-71] [*]
        FromClause [72-78] [FROM B]
          TablePathExpression [77-78] [B]
            PathExpression [77-78] [B]
              Identifier(B) [77-78] [B]
      Select [132-147] [SELECT * FROM C]
        SelectList [139-140] [*]
          SelectColumn [139-140] [*]
            Star(*) [139-140] [*]
        FromClause [141-147] [FROM C]
          TablePathExpression [146-147] [C]
            PathExpression [146-147] [C]
              Identifier(C) [146-147] [C]
--
SELECT
  *
FROM
  A
LEFT UNION DISTINCT CORRESPONDING BY (a, b, c)
SELECT
  *
FROM
  B
LEFT UNION DISTINCT CORRESPONDING BY (a, b, c)
SELECT
  *
FROM
  C
==

# STRICT cannot be used with outer mode.
SELECT *
FROM A
FULL UNION ALL STRICT CORRESPONDING BY (a, b, c)
SELECT *
FROM B
--
ERROR: Syntax error: STRICT cannot be used with outer mode in set operations [at 3:16]
FULL UNION ALL STRICT CORRESPONDING BY (a, b, c)
               ^
==

# Multiple set operations: STRICT cannot be used with outer mode.
SELECT *
FROM A
FULL UNION ALL CORRESPONDING BY (a, b, c)
SELECT *
FROM B
FULL UNION ALL STRICT CORRESPONDING BY (a, b, c)
SELECT *
FROM C
--
ERROR: Syntax error: STRICT cannot be used with outer mode in set operations [at 6:16]
FULL UNION ALL STRICT CORRESPONDING BY (a, b, c)
               ^
==

# OUTER is interpreted as FULL.
SELECT 1 AS A
OUTER UNION ALL CORRESPONDING
SELECT 2 AS A
--
QueryStatement [0-57] [SELECT 1 AS...SELECT 2 AS A]
  Query [0-57] [SELECT 1 AS...SELECT 2 AS A]
    SetOperation(UNION ALL) [0-57] [SELECT 1 AS...SELECT 2 AS A]
      SetOperationMetadataList [14-43] [OUTER UNION ALL CORRESPONDING]
        SetOperationMetadata [14-43] [OUTER UNION ALL CORRESPONDING]
          SetOperationType [20-25] [UNION]
          SetOperationAllOrDistinct [26-29] [ALL]
          SetOperationColumnMatchMode [30-43] [CORRESPONDING]
          SetOperationColumnPropagationMode [14-19] [OUTER]
      Select [0-13] [SELECT 1 AS A]
        SelectList [7-13] [1 AS A]
          SelectColumn [7-13] [1 AS A]
            IntLiteral(1) [7-8] [1]
            Alias [9-13] [AS A]
              Identifier(A) [12-13] [A]
      Select [44-57] [SELECT 2 AS A]
        SelectList [51-57] [2 AS A]
          SelectColumn [51-57] [2 AS A]
            IntLiteral(2) [51-52] [2]
            Alias [53-57] [AS A]
              Identifier(A) [56-57] [A]
--
SELECT
  1 AS A
FULL UNION ALL CORRESPONDING
SELECT
  2 AS A
==

# OUTER and FULL used together in multiple inputs.
SELECT 1 AS A
OUTER UNION ALL CORRESPONDING BY (A)
SELECT 1 AS A, 2 AS C
FULL OUTER UNION ALL CORRESPONDING BY (A)
SELECT 1 AS B, 1 AS A

--
QueryStatement [0-136] [SELECT 1 AS...B, 1 AS A]
  Query [0-136] [SELECT 1 AS...B, 1 AS A]
    SetOperation(UNION ALL) [0-136] [SELECT 1 AS...B, 1 AS A]
      SetOperationMetadataList [14-114] [OUTER UNION...ESPONDING BY (A)]
        SetOperationMetadata [14-50] [OUTER UNION...ESPONDING BY (A)]
          SetOperationType [20-25] [UNION]
          SetOperationAllOrDistinct [26-29] [ALL]
          SetOperationColumnMatchMode [30-46] [CORRESPONDING BY]
          SetOperationColumnPropagationMode [14-19] [OUTER]
          ColumnList [47-50] [(A)]
            Identifier(A) [48-49] [A]
        SetOperationMetadata [73-114] [FULL OUTER...RESPONDING BY (A)]
          SetOperationType [84-89] [UNION]
          SetOperationAllOrDistinct [90-93] [ALL]
          SetOperationColumnMatchMode [94-110] [CORRESPONDING BY]
          SetOperationColumnPropagationMode [73-83] [FULL OUTER]
          ColumnList [111-114] [(A)]
            Identifier(A) [112-113] [A]
      Select [0-13] [SELECT 1 AS A]
        SelectList [7-13] [1 AS A]
          SelectColumn [7-13] [1 AS A]
            IntLiteral(1) [7-8] [1]
            Alias [9-13] [AS A]
              Identifier(A) [12-13] [A]
      Select [51-72] [SELECT 1 AS A, 2 AS C]
        SelectList [58-72] [1 AS A, 2 AS C]
          SelectColumn [58-64] [1 AS A]
            IntLiteral(1) [58-59] [1]
            Alias [60-64] [AS A]
              Identifier(A) [63-64] [A]
          SelectColumn [66-72] [2 AS C]
            IntLiteral(2) [66-67] [2]
            Alias [68-72] [AS C]
              Identifier(C) [71-72] [C]
      Select [115-136] [SELECT 1 AS B, 1 AS A]
        SelectList [122-136] [1 AS B, 1 AS A]
          SelectColumn [122-128] [1 AS B]
            IntLiteral(1) [122-123] [1]
            Alias [124-128] [AS B]
              Identifier(B) [127-128] [B]
          SelectColumn [130-136] [1 AS A]
            IntLiteral(1) [130-131] [1]
            Alias [132-136] [AS A]
              Identifier(A) [135-136] [A]
--
SELECT
  1 AS A
FULL UNION ALL CORRESPONDING BY (A)
SELECT
  1 AS A,
  2 AS C
FULL UNION ALL CORRESPONDING BY (A)
SELECT
  1 AS B,
  1 AS A
